[BZ #1201]

* posix/regex.h: g++ still cannot handled [restrict].